<resources>


    <string name="temperature">Temperature</string>
    <string name="condition" translatable="false">Condition</string>
    <string name="location" translatable="false">Location</string>
    <string name="powered_by_yahoo" translatable="false">powered by Yahoo!</string>
    <string name="condition_icon" translatable="false">Condition Icon</string>
    <string name="loading" translatable="false">Loading&#8230;</string>
    <string name="temperature_output" translatable="false">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <!-- То что написано самим -->

    <string name="app_name">WhenWash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Weather">Weather</string>
    <string name="Carwashes">Carwashes</string>
    <string name="CarService">Car services</string>
    <string name="MondayShort">Mon</string>
    <string name="TuesdayShort">Tue</string>
    <string name="WensdayShort">Wed</string>
    <string name="ThursdayShort">Thu</string>
    <string name="FridayShort">Fri</string>
    <string name="SaturdayShort">Sat</string>
    <string name="SundayShort">Sun</string>
    <string name="Profile">Profile</string>

    <!-- То что написано самим -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="pref_geolocation_enabled">geolocation_enabled</string>
    <string name="pref_manual_location">manual_location</string>
    <string name="pref_cached_location">cached_location</string>
    <string name="pref_temperature_unit">temperature_unit</string>
    <string name="pref_needs_setup">needs_setup</string>
    <string name="pref_default_unit">C</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_enable_geolocation">Enable GeoLocation</string>
    <string name="pref_description_enable_geolocation">Automatically obtain weather information based on my current location</string>

    <string name="pref_title_manual_location">Manual Location</string>
    <string name="pref_default_location">Austin, TX</string>

    <string name="pref_title_temperature_unit">Temperature Unit</string>
    <string-array name="pref_temperature_unit_titles">
        <item>&#176;C</item>
        <item>&#176;F</item>
    </string-array>
    <string-array name="pref_temperature_unit_values">
        <item>C</item>
        <item>F</item>
    </string-array>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">failed</string>
    <string name="exit">Exit</string>
    <string name="title_activity_maps2">Map</string>


</resources>
