<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".pogoga">

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/condition_icon"
                android:src="@drawable/icon_na" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weatherIconImageView"
                android:layout_centerHorizontal="true"
                android:text="@string/temperature"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:text="@string/condition"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/forecastContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/imageView"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="34dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <fragment
                    android:id="@+id/forecast_0"
                    android:name="com.example.dap.whenwash.WeatherConditionFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecast_1"
                    android:name="com.example.dap.whenwash.WeatherConditionFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecast_2"
                    android:name="com.example.dap.whenwash.WeatherConditionFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecast_3"
                    android:name="com.example.dap.whenwash.WeatherConditionFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecast_4"
                    android:name="com.example.dap.whenwash.WeatherConditionFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
